--- a/style.css
+++ b/style.css
@@ -20,4 +20,11 @@ body {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   width: 400px;
   max-width: 100%;
+  overflow: hidden;
+}
+
+.header {
+  background-color: #eee;
+  padding: 20px;
+
 }
